--- a/.github/workflows/complex.yml
+++ b/.github/workflows/complex.yml
@@ -7,32 +7,20 @@ jobs:
     name: First Job
     runs-on: ubuntu-latest
     steps:
-      - name: Step one
-        uses: actions/checkout@v2
-      - name: Step two
-        run: date
+        - run: date
   job2:
     name: Second Job
     runs-on: windows-latest
     steps:
-      - name: Step one
-        uses: actions/checkout@v2
-      - name: Step two
-        run: Get-Date
+      - run: Get-Date
   job3:
     name: Third Job
     runs-on: macos-latest
     steps:
-      - name: Step one
-        uses: actions/checkout@v2
-      - name: Step two
-        run: date
+      - run: date
   job4:
     name: Fourth Job
     runs-on: ubuntu-latest
     needs: [job1, job2, job3]
     steps:
-      - name: Step one
-        uses: actions/checkout@v2
-      - name: Step two
-        run: echo Hello, world!
+      - run: echo Hello, world!
